# project-catalog-api

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/routes/: health.py  projects.py  version.py
app/core/: config.py  database.py
app/models/: project.py
app/schemas/: project.py
app/services/: project_service.py
tests/: conftest.py  test_health.py  test_projects.py
