[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project-catalog-api"
version = "0.1.0"
description = "Production-ready FastAPI service for managing portfolio projects"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.0,<1.0.0",
    "uvicorn[standard]>=0.35.0,<1.0.0",
    "sqlalchemy>=2.0.41,<3.0.0",
    "pydantic-settings>=2.10.0,<3.0.0"
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.1,<1.0.0",
    "pytest>=8.4.1,<9.0.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
